--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
     <header>
     <!-- header top -->
         <div class="ms_header-top">
-            SONY
+            <div class="logo-sony">
+                <a href="#"><img src="img/sony_logo.svg" alt="logo"></a>
+            </div>
         </div>
+
+    <!-- header bottom -->
+
         <div class="ms_header-bottom">
             <div class="container">
                 <div class="row">
                   <div class="col-6 col-xxl-1">
-                      <div class="logo">
-                          LOGO
+                      <div class="logo-ps">
+                          <a href="#"><img src="img/play_logo.svg" alt="logo"></a>
                       </div>
                     </div>
                     <div class="col-8 d-none d-xxl-block">
@@ -32,7 +37,7 @@
 
                   <div class="col-6 col-xxl-3">
                     <div class="burgher d-xxl-none">
-                        BURGHER
+                       <i class="fa fa-bars" aria-hidden="true"></i>
                     </div>
                     <div class="main-menu-dx d-none d-xxl-block">
                         MENU dx
