--- a/index.html
+++ b/index.html
@@ -22,25 +22,63 @@
     <!-- header bottom -->
 
         <div class="ms_header-bottom">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                   <div class="col-6 col-xxl-1">
                       <div class="logo-ps">
                           <a href="#"><img src="img/play_logo.svg" alt="logo"></a>
                       </div>
                     </div>
-                    <div class="col-8 d-none d-xxl-block">
+                    <div class="col-7 d-none d-xxl-block">
                         <div class="main-menu-sx">
-                            MENU sx
+                            <ul>
+                                <li>
+                                    <a href="#">Giochi</a>
+                                    <span class="chevron-down"><i class="fa-solid fa-chevron-down"></i></span>
+                                </li>
+                                <li>
+                                    <a href="#">Hardware</a>
+                                    <span class="chevron-down"><i class="fa-solid fa-chevron-down"></i></span>
+                                </li>
+                                <li>
+                                    <a href="#">Servizi</a>
+                                    <span class="chevron-down"><i class="fa-solid fa-chevron-down"></i></span>
+                                </li>
+                                <li>
+                                    <a href="#">Novità</a>
+                                    <span class="chevron-down"><i class="fa-solid fa-chevron-down"></i></span>
+                                </li>
+                                <li>
+                                    <a href="#">Fai acquisti</a>
+                                    <span class="chevron-down"><i class="fa-solid fa-chevron-down"></i></span>
+                                </li>
+                                <li>
+                                    <a href="#">Support</a>
+                                    <span class="chevron-down"><i class="fa-solid fa-chevron-down"></i></span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
 
-                  <div class="col-6 col-xxl-3">
+                  <div class="col-6 col-xxl-4">
                     <div class="burgher d-xxl-none">
                        <i class="fa fa-bars" aria-hidden="true"></i>
                     </div>
                     <div class="main-menu-dx d-none d-xxl-block">
-                        MENU dx
+                        <ul>
+                            <li>
+                                <a href="#">My PlayStation</a>
+                                <span class="chevron-down"><i class="fa-solid fa-chevron-down"></i></span>
+                            </li>
+                            <li>
+                                <div class="btn ms_header-btn">
+                                    Accedi
+                                </div>
+                            </li>
+                            <li id="ms_lens">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </li>
+                        </ul>
                     </div>
                   </div>
                 </div>
