--- a/index.html
+++ b/index.html
@@ -12,24 +12,23 @@
 <body>
  <!-- *-*-*-*-*-*-*-*-*-*-*-*-*HEADER-*-*-*-*-*-*-*-*-*-*-*-* -->
     <header>
-    <!-- header top -->
+        <!-- header top -->
         <div class="ms_header-top">
             <div class="logo-sony">
                 <a href="#"><img src="img/sony_logo.svg" alt="logo"></a>
             </div>
         </div>
 
-    <!-- header bottom -->
-
+        <!-- header bottom -->
         <div class="ms_header-bottom">
             <div class="container-fluid">
                 <div class="row">
-                  <div class="col-6 col-xxl-1">
+                  <div class="col-6 col-xl-1">
                       <div class="logo-ps">
                           <a href="#"><img src="img/play_logo.svg" alt="logo"></a>
                       </div>
                     </div>
-                    <div class="col-7 d-none d-xxl-block">
+                    <div class="col-7 d-none d-xl-block">
                         <div class="main-menu-sx">
                             <ul>
                                 <li>
@@ -60,11 +59,11 @@
                         </div>
                     </div>
 
-                  <div class="col-6 col-xxl-4">
-                    <div class="burgher d-xxl-none">
+                  <div class="col-6 col-xl-4">
+                    <div class="burgher d-xl-none">
                        <i class="fa fa-bars" aria-hidden="true"></i>
                     </div>
-                    <div class="main-menu-dx d-none d-xxl-block">
+                    <div class="main-menu-dx d-none d-xl-block">
                         <ul>
                             <li>
                                 <a href="#">My PlayStation</a>
@@ -83,10 +82,40 @@
                   </div>
                 </div>
               </div>
-        </div>
+        </div>        
+
     </header>
 
+ <!-- *-*-*-*-*-*-*-*-*-*-*-*-* MAIN -*-*-*-*-*-*-*-*-*-*-*-* -->
 
+    <main>
+        <section class="ms_sponsored">
+            <div class="sponsored-content">
+
+                <div class="game-name">
+                    <img src="img/returnal-hero-banner-logo.png" alt="">
+                </div>
+
+                <div class="game-info">
+                    <h2>Rompi il cerchio</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, eius rem culpa quos assumenda reiciendis recusandae err</p>
+                    
+                </div>
+
+                <div class="btn ms_buy-btn">Acquista ora</div>
+
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+    </main>
 
 
 
