--- a/index.html
+++ b/index.html
@@ -152,12 +152,69 @@
         <section class="play">
             <div class="play-cont">
                 <h4>PLAY HAS NO LIMITS</h4>
-                <h2>Ecco la nuova PlayStation 5</h2>
+                <h2>Ecco la PlayStation 5</h2>
                 <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
             </div>
         </div>
         </section>
 
+        <!-- Section Console -->
+        <section class="console">
+            <div class="container-lg">
+                <h2>Console PlayStation 5</h2>
+                <p>Sperimenta la nuova generazione di incredibili giochi PlayStation.</p>
+                <div class="btn ms_console-btn">Maggiori Informazioni</div>
+            </div>
+
+            <img src="img/playstation-5-thumb.png" alt="">
+
+            <div class="container-lg">
+                <div class="row row-cols-md-5">
+                    <div class="col-4">
+                        <div class="ms_play-card ms_selected">
+                            <img src="img/playstation-5-thumb.png" alt="">
+                            <div class="ms_object">Console PS5</div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="ms_play-card ms_opacity">
+                            <img src="img/joypad-thumb.png" alt="">
+                            <div class="ms_object">Controller wireless DualSense
+                                <span class="ms_trade"><i class="fa-solid fa-trademark"></i></span>
+                            </div>
+
+                        </div>
+                        
+                    </div>
+                    <div class="col-4">
+                        <div class="ms_play-card ms_opacity">
+                            <img src="img/headset-thumb.png" alt="">
+                            <div class="ms_object">Cuffie wireless con microfono Pulse 3
+                            <span class="ms_trade"><i class="fa-solid fa-trademark"></i></span>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="ms_play-card ms_opacity">
+                            <img src="img/remote-thumb.png" alt="">
+                            <div class="ms_object">Telecomando Media</div>
+                        </div>
+
+                    </div>
+                    <div class="col-4"> 
+                        <div class="ms_play-card ms_opacity">
+                            <img src="img/camera-thumb.jpg" alt="">
+                            <div class="ms_object">Telecamera HD</div>
+                        </div>
+                    </div>
+
+                </div>  
+            </div>
+
+
+
+        </section>
 
 
 
