banner it takes two

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <main>
         <!-- Banner Returnal -->
-        <section class="ms_sponsored">
+        <section class="ms_sponsored ms_returnal">
             <div class="sponsored-content">
 
                 <div class="game-name">
@@ -216,6 +216,24 @@
 
         </section>
 
+        <!-- gioco -->
+        <section class="ms_sponsored ms_it-takes-two">
+            <div class="sponsored-content">
+
+                <div class="game-name">
+                    <img src="img/it-takes-two-logo.png" alt="">
+                </div>
+
+                <div class="game-info">
+                    <h2>Un'avventura cooperativa selvaggia ti attende</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, eius rem culpa quos assumenda reiciendis recusandae err</p>
+                    
+                </div>
+
+                <div class="btn ms_buy-btn">Acquista ora</div>
+
+            </div>
+        </section>
 
 
 
