--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             </div>
         </section>
 
-        <!-- Section-----------------Card -->
-        <section class="sect-card">
+        <!-- Section-----------------Cards -->
+        <section class="sect-cards">
             <div class="container-lg">
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-xl-6">
                     
@@ -333,7 +333,7 @@
             </div>   
         </section>
 
-        <!-- Section---------------Esplora -->
+        <!-- Section---------------Esplora PS4-->
         <section class="esplora">
             <div class="container-lg">
                 <h2 class="ms_top-text">Esplora PlayStation 4</h2>
@@ -374,26 +374,54 @@
         </section>
 
         <!-- Section----------------Plus -->
-        <section class="plus">
+        <section class="ms_experience plus">
             <div class="container-lg">
                 <div class="row row-cols-1 row-cols-md-2">
                     <div class="col">
-                        <div class="plus-card">
-                            <img src="img/ps-plus-logo.png" alt="" class="img-plus">
+                        <div class="ms_experience-card">
+                            <img src="img/ps-plus-logo.png" alt="" class="ms_experience-img-sx">
                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veniamLorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veniam</p>
-                            <div class="btn ms_plus-btn">Esplora PlayStation Plus</div>
+                            <div class="btn ms_experience-btn">Esplora PlayStation Plus</div>
     
                         </div>
                     </div>
                     <div class="col d-none d-md-block">
-                        <div class="plus-card">
-                            <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="monster">
+                        <div class="ms_experience-card">
+                            <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="ms_experience-img-dx">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- -----------------------Sconti -->
+        <section class="esplora">
+            <div class="container-lg">
+                <h2 class="ms_top-text">Nuovi sconti sul PlayStation Store</h2>
+                <h3 class="ms_top-text">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
+                </h3>
+                <div class="row row-cols-1 row-cols-md-3">
+
+                    <div class="col">
+                        <div class="ms_card">
+                            <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="ms_card">
+                            <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="ms_card">
+                            <img src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                        </div>
+                    </div>
+    </div>
+            </div>
+        </section>
     </main>
 
 
