--- a/index.html
+++ b/index.html
@@ -422,6 +422,29 @@
     </div>
             </div>
         </section>
+
+        <!-- Section----------------Play Now -->
+        <section class="ms_experience play-now">
+            <div class="container-lg">
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col">
+                        <div class="ms_experience-card">
+                            <img src="img/ps-now-logo-two-column.png" alt="" class="ms_experience-img-sx">
+                            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veniamLorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veniam</p>
+                            <div class="btn ms_experience-btn ms_txt-black">Esplora PlayStation Plus</div>
+    
+                        </div>
+                    </div>
+                    <div class="col d-none d-md-block">
+                        <div class="ms_experience-card">
+                            <img src="img/ps-now-april-featured-image-block.png" alt="" class="ms_experience-img-dx">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
 
