--- a/index.html
+++ b/index.html
@@ -491,10 +491,47 @@
             </div>
         </section>
 
-
     </main>
 
+    <!-- *-*-*-*-*-*-*-*-*-*-*-*-* FOOTER -*-*-*-*-*-*-*-*-*-*-* -->
 
+    <footer>
+        <div class="container-lg">
+            <div class="row row-cols-1 row-cols-xl-2">
+                <div class="col">
+                    <div class="ms_card">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="row row-cols-1 row-cols-md-3">
+                        <div class="col">
+                            <div class="ms_card">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="ms_card">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="ms_card">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="ms_card">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
