--- a/index.html
+++ b/index.html
@@ -499,26 +499,50 @@
         <div class="container-lg">
             <div class="row row-cols-1 row-cols-xl-2">
                 <div class="col">
-                    <div class="ms_card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                    <div class="ms_card footer-logo-ps">
+                        <span class="ms_logo-ps"><i class="fa-brands fa-playstation"></i></span>
+                        <sub>&#174</sub>
+                        <div>
+                            <span class="ms_logo-globe"><i class="fa-solid fa-globe"></i></span>
+                            Country / Region: Italy
+                        </div>
                     </div>
                 </div>
 
                 <div class="col">
                     <div class="row row-cols-1 row-cols-md-3">
                         <div class="col">
-                            <div class="ms_card">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                            <div class="ms_card footer-list">
+                                <ul>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="ms_card">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                            <div class="ms_card footer-list">
+                                <ul>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                </ul>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="ms_card">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                            <div class="ms_card footer-list">
+                                <ul>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                    <li>Link footer n</li>
+                                </ul>
+
                             </div>
                         </div>
                     </div>
@@ -526,7 +550,8 @@
 
                 <div class="col">
                     <div class="ms_card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, ad reiciendis pariatur assumenda voluptates nesciunt autem aliquid? Earum sequi impedit voluptas, distinctio perferendis veniam nihil obcaecati sed praesentium dolor hic.
+                        <img src="img/sie-logo.svg" alt="" class="logo-sie">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, blanditiis, similique impedit fugiat enim quas eum cum, quaerat tenetur perferendis officiis saepe quod sapiente sed recusandae! Voluptates quos ut quidem!Lorem Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum ut consequuntur illo nemo. <a href="#">Maggiori info</a></p>
                     </div>
                 </div>
             </div>
